corpus/c/macro_include/case-01/snapshots/gcc13_14/native_text_capture/render.debug.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: [compiler.residual] 'missing_symbol' undeclared (first use in this function)
In file included from src/wrapper.h:1,
                 from src/main.c:1:
src/main.c: In function 'main':
    1 | #define CALL_BAD() missing_symbol
      |                    ^~~~~~~~~~~~~~
raw : src/config.h:1:20: error: 'missing_symbol' undeclared (first use in this function) @ src/config.h:1:20
| src/config.h:1:20
| #define CALL_BAD() missing_symbol
|                    ^
include: In file included from src/wrapper.h:1
include: src/main.c:1 from src/main.c:1:
macro: src/main.c:3:25 in expansion of macro 'CALL_BAD'
note: src/main.c:3:25: note: in expansion of macro 'CALL_BAD'
note: src/config.h:1:20: note: each undeclared identifier is reported only once for each function it appears in
note: omitted 1 additional note(s)
raw:
  src/config.h:1:20: error: 'missing_symbol' undeclared (first use in this function)
  In file included from src/wrapper.h:1,
                   from src/main.c:1:
  src/main.c: In function 'main':
      1 | #define CALL_BAD() missing_symbol
        |                    ^~~~~~~~~~~~~~
debug: rule_id=rule.family.ingress_specific_override
debug: matched_conditions=context=macro_expansion, context=include, child_note_kind=macro_expansion, message_contains=include, message_contains=included from, child_message_contains=macro, existing_specific_family=compiler.residual
debug: suppression_reason=preserved_specific_family_from_ingress
explain: repair_unit=repair-unit:node-residual-compiler-0 proof=Unresolved visibility=NeverHidden
explain: member=node:residual-compiler-0 target=DiagnosticNode { node_ref: "residual-compiler-0" } unresolved=false
explain: raw_capture=stderr.raw
details: --formed-explain | raw: --formed-raw